# kano-peripherals

./: .gitignore  Jenkinsfile  Makefile  README.md  README.rst  pytest.ini  requirements-dev.txt  requirements.txt
debian/: changelog  control  copyright  install  kano-peripherals-i18n-orig.install  kano-peripherals.install  kano-peripherals.postinst  kano-peripherals.postrm  kano-peripherals.preinst  kano-touch-support-dbg.install  kano-touch-support-dev.install  kano-touch-support.install  kano-touch-support.postinst  libkano-hat.install  libkano-hat.links  libkano-hat.postinst  postinst  rules
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst
etc/dbus-1/system.d/: me.kano.boards.conf
etc/init.d/: kano-peripherals
etc/modprobe.d/: snd_bcm2835_blacklist.conf
etc/sudoers.d/: kano-peripherals_conf
etc/udev/rules.d/: 99-comm.rules
kano_peripherals/: __init__.py  base_dbus_service.py  base_device_service.py  device_discovery_service.py  lockable_service.py  paths.py  priority_lock.py  return_codes.py  service_manager.py  utils.py
kano_peripherals/ck2_pro_hat/driver/: battery_notify_thread.py  high_level.py  service.py
kano_peripherals/pi_hat/: __init__.py  colours.py
kano_peripherals/pi_hat/driver/: high_level.py  service.py
kano_peripherals/speaker_leds/: __init__.py  colours.py  high_level.py  low_level.py  manufacturing_tests.py  pwm_driver.py  speaker_led.py  use_cases.py
kano_peripherals/speaker_leds/driver/: __init__.py  high_level.py  pwm_driver.py  service.py
kano_peripherals/wrappers/: detection.py
kano_peripherals/wrappers/led_ring/: base_animation.py  cpu_monitor.py  init_flow.py  notification.py
libs/pi_hat/: CMakeLists.txt
libs/pi_hat/batt/: battery-status.c
libs/pi_hat/examples/c/src/: main.c
libs/pi_hat/examples/python/: paths.py  power_button.py  power_button_signal.py
libs/pi_hat/examples/python/ck2_lite/: leds.py  paths.py  power_button.py  power_button_signal.py
libs/pi_hat/examples/python/ck2_pro/: battery_status_signal.py  callbacks.py  paths.py  power_button_signal.py
po/: Makefile  es_AR.po
systemd/system/: kano-boards.service  kano-bootup-battery.service  kano-speakerleds.service  kano-touch-flip-xorg.service  turn-off-hat-leds.service
systemd/user/: kano-boards.service  kano-speakerleds.service
tests/: conftest.py
tests/fixtures/: hw_config.py
tests/kano_peripherals/wrappers/: test_detection.py
tests/manufacturing/: test_ck2_pro_hat.py  test_pi_hat.py  test_power_hat.py  test_speaker_led.py
tools/: calibrate-pihat-leds
touch-detect/: CMakeLists.txt  Makefile  README.md  build.sh  conanfile.py  rotate_fns.sh  set_rotate.sh  touch-detect.c
touch-detect/conf/etc/systemd/user/: kano-touch-flip.service
touch-detect/conf/xorg.conf.d/: 80-kano-touch.conf
touch-detect/include/Kano/TouchDetect/: touch_detect.h
touch-detect/scripts/: flip_qt.sh  flip_xorg.sh  set_rotate.sh
touch-detect/src/: main.cpp
touch-detect/test_package/: CMakeLists.txt  README.md  conanfile.py  example.cpp
